# duels

./: .gitignore  README.md  duels.py  gen_wrapper.py  group.py  manager.py
deb/: duels[focal]_5.0.1.deb  duels[jammy]_5.0.1.deb
duels/: create_package.sh  duels.py  gen_wrapper.py  install.sh  manager.py
duels/include/duels/: client.h  game_state.h  local.h  server.h
duels/include/duels/algo/: a_star.h  ga.h  rand_utils.h
duels/include/duels/utils/: grid.h  rand_utils.h
duels/templates/client/: CMakeLists.txt  game.cpp
duels/templates/server/: CMakeLists.txt  gui.py  server.cpp  server_turns.cpp
examples/: gorilla.yaml  gorillas.yaml  pong.yaml  treasure_hunt.yaml
examples/fibo/: CMakeLists.txt  fibo.yaml  fibo_gui.py  server.cpp
examples/fibo/client_candidates/: CMakeLists.txt  fibo.cpp  fibo.yaml  gen_candidates.py
examples/fibo/client_template/: CMakeLists.txt  fibo.cpp
examples/fibo/src/: fibo_ai.cpp
examples/gorillas/: gorillas_gui.py
examples/gorillas/gorillas/: __init__.py
examples/treasure_hunt/: treasure_hunt_gui.py
examples/treasure_hunt/sprites/: info.txt
gorilla/: CMakeLists.txt  README.md  gorilla_gui  gorilla_gui.py  server.cpp
gorilla/client_template/: CMakeLists.txt  gorilla.cpp
gorilla/include/: gorilla.h
gorilla/include/duels/gorilla/: game.h  msg.h
gorilla/src/: gorilla.cpp
include/duels/: client.h  game_result.h  game_state.h  local.h  parser.h  player.h  player_io.h  server.h  stream_overloads.h  zmq_io.h
include/duels/algo/: a_star.h
include/duels/utils/: grid.h  node_point.h  vector2d.h
pong/: CMakeLists.txt  README.md  pong.yaml  pong_gui  server.cpp
pong/client_template/: CMakeLists.txt  pong.cpp
pong/include/duels/pong/: game.h  msg.h
templates/client/: CMakeLists.txt  game.cpp
templates/server/: CMakeLists.txt  gui.py  server.cpp  server_turns.cpp
tests/: CMakeLists.txt  a_star.cpp  client_ex.cpp  communicator.cpp  game_server.h  game_status.h  gen_headers.py  player_client.h  server_ex.cpp  yaml_parser.cpp
tests/games/: pods.h  pods.yaml
tests/pygame/: snake.py
tests/test/: client.cpp  config.yaml  display.py  msg_test.cpp  server.cpp
